# ckanext-citeproc

./: .gitignore  .gitmodules  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pyright.yml
ckanext/citeproc/: config_declaration.yaml  extract.py  helpers.py  interfaces.py  plugin.py
ckanext/citeproc/assets/: citeproc_modal.js  webassets.yml
ckanext/citeproc/i18n/: ckanext-citeproc.pot
ckanext/citeproc/i18n/en/LC_MESSAGES/: ckanext-citeproc.po
ckanext/citeproc/i18n/fr/LC_MESSAGES/: ckanext-citeproc.po
ckanext/citeproc/logic/: action.py  auth.py  schema.py
ckanext/citeproc/templates/package/: read.html  resource_read.html
ckanext/citeproc/templates/package/snippets/: info.html
ckanext/citeproc/templates/snippets/: citeproc_button.html  citeproc_modal.html
