[project]
name = "ckanext-citeproc"
version = "0.1.0"
description = "Citeproc extension for CKAN"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
dependencies = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."ckan.plugins"]
citeproc = "ckanext.citeproc.plugin:CiteProcPlugin"
